# let-me-sleep

./: .gitignore  LICENSE  README.md  TODO.md  build.py  build_all.py  i18n.py  installer.iss  main.py  pyproject.toml  scheduler.py  test_blocker.py
updater/: Cargo.toml  build.rs
updater/src/: main.rs
