[package]
name = "letmesleep-updater"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
reqwest = { version = "0.13.2", features = ["blocking", "json"] }
semver = "1.0.27"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
zip = "7.4.0"

[profile.release]
opt-level = "s"
lto = true
strip = true

[build-dependencies]
winres = "0.1"
